# celo-bls-snark-rs

./: .gitignore  .gitmodules  AUTHORS  Cargo.toml  README.md  diff.txt
.circleci/: config.yml
bls/: .gitignore  Cargo.toml
bls/algebra/: Cargo.toml
bls/algebra/examples/: pop.rs  pop_csv.rs  simple_signature.rs
bls/algebra/src/: lib.rs
bls/algebra/src/bls/: keys.rs
bls/algebra/src/curve/: cofactor.rs
bls/algebra/src/curve/hash/: try_and_increment.rs
bls/algebra/src/hash/: composite.rs  direct.rs  mod.rs
bls/algebra/src/test_utils/: test_vec.csv
bls/algebra/test_utils/: pedersen_hash.sage  test_vec.csv
bls/gadgets/: Cargo.toml
bls/gadgets/src/: bitmap.rs  bls.rs  hash_to_group.rs  lib.rs  slice_update.rs  validator.rs
bls/snark/: Cargo.toml
bls/snark/examples/: proof.rs
bls/snark/src/: lib.rs
bls/snark/src/circuit/: mod.rs
bls/snark/src/encoding/: mod.rs
bls/snark/src/gadgets/: mod.rs
bls/snark/src/gadgets/alloc_conditional_check/: mod.rs
bls/snark/src/gadgets/bls/: mod.rs
bls/snark/src/gadgets/hash_to_group/: mod.rs
bls/snark/src/gadgets/smaller_than/: mod.rs
bls/snark/src/gadgets/validator/: mod.rs
bls/snark/src/gadgets/y_to_bit/: mod.rs
bls/src/: lib.rs
bls/src/bls/: keys.rs
bls/src/curve/hash/: mod.rs  try_and_increment.rs
bls/src/hash/: direct.rs
crates/algebra/benches/: cofactor.rs
crates/algebra/examples/: pop.rs  pop_csv.rs  simple_signature.rs
crates/algebra/src/: lib.rs
crates/algebra/src/bls/: keys.rs
crates/algebra/src/curve/hash/: try_and_increment.rs
crates/algebra/src/hash/: composite.rs  direct.rs
crates/bls-crypto/: Cargo.toml
crates/bls-crypto/benches/: batch_bls.rs
crates/bls-crypto/examples/: pop.rs  pop_csv.rs  simple_signature.rs
crates/bls-crypto/src/: lib.rs  test_helpers.rs
crates/bls-crypto/src/bls/: batch.rs  cache.rs  ffi.rs  keys.rs  mod.rs  public.rs  public.rs.orig  secret.rs  signature.rs
crates/bls-crypto/src/curve/hash/: try_and_increment.rs
crates/bls-crypto/src/ffi/: mod.rs  serialization.rs  signatures.rs
crates/bls-crypto/src/hash/: composite.rs  direct.rs
crates/bls-crypto/src/hash_to_curve/: cofactor.rs  mod.rs  try_and_increment.rs  try_and_increment_cip22.rs
crates/bls-crypto/src/hashers/: composite.rs  direct.rs  mod.rs
crates/bls-gadgets/: 3  Cargo.toml  diff.txt
crates/bls-gadgets/src/: bitmap.rs  bls.rs  hash_to_group.rs  lib.rs  smaller_than.rs  utils.rs  y_to_bit.rs
crates/bls-snark-sys/: Cargo.toml
crates/bls-snark-sys/src/: cache.rs  lib.rs  serialization.rs  signatures.rs  utils.rs
crates/bls-snark-sys/src/snark/: epoch_block.rs  mod.rs  test_helpers.rs
crates/epoch-snark/: Cargo.toml  diff.txt
crates/epoch-snark/examples/: constraints.rs  proof.rs  proof_from_file.rs
crates/epoch-snark/src/: encoding.rs  epoch_block.rs  epochs.rs  lib.rs
crates/epoch-snark/src/api/: mod.rs  prover.rs  setup.rs  verifier.rs
crates/epoch-snark/src/api/ffi/: mod.rs  utils.rs
crates/epoch-snark/src/gadgets/: .epochs.rs.swo  epoch_bits.rs  epoch_data.rs  epochs.rs  hash_to_bits.rs  mod.rs  pack.rs  proof_of_compression.rs  single_update.rs  smaller_than.rs
crates/epoch-snark/tests/: e2e.rs  fixtures.rs  quick_e2e.rs
crates/epoch-snark/tools/: release.sh
crates/gadgets/: Cargo.toml  README.md
crates/gadgets/src/: bls.rs  hash_to_group.rs  slice_update.rs  y_to_bit.rs
crates/persistent-prover/: .env  Cargo.toml  plumo.sqlite3
crates/persistent-prover/migrations/2022-03-29-183538_proofs/: down.sql  up.sql
crates/persistent-prover/src/: error.rs  handler.rs  lib.rs  models.rs  schema.rs  types.rs
crates/plumo-wasm-verifier/: Cargo.toml  package-lock.json
crates/plumo-wasm-verifier/examples/web/: package-lock.json  package.json  webpack.config.js
crates/plumo-wasm-verifier/examples/web/js/: index.js
crates/plumo-wasm-verifier/examples/web/static/: index.html
crates/plumo-wasm-verifier/src/: lib.rs
crates/snark/src/: lib.rs
crates/snark/src/encoding/: mod.rs
go/: bls.go  bls.h  bls_android.go  bls_android_64.go  bls_arm.go  bls_arm64.go  bls_arm7.go  bls_darwin.go  bls_darwin64.go  bls_ios.go  bls_linux.go  bls_linux386.go  bls_linux64.go  bls_mips.go  bls_mips64.go  bls_mips64le.go  bls_mipsle.go  bls_test.go  bls_windows.go  bls_windows64.go  ultralight_test.go  verify.go
go/bls/: bls.go  bls.h  bls_android.go  bls_arm.go  bls_arm64.go  bls_arm7.go  bls_darwin.go  bls_darwin64.go  bls_ios.go  bls_linux.go  bls_linux386.go  bls_linux64.go  bls_mips.go  bls_mips64.go  bls_mips64le.go  bls_mipsle.go  bls_test.go  bls_windows.go  bls_windows64.go
go/cmd/: bls_example.go
go/cmd/example/: main.go
go/snark/: go.mod  snark_test.go
tools/: release.sh
ultralight/: Cargo.toml
ultralight/Spec/: CeloLightClient.tex  References.bib
ultralight/benches/: cofactor.rs
ultralight/examples/: simple_signature.rs
ultralight/spec/: References.bib
ultralight/src/: lib.rs
ultralight/src/bls/: keys.rs
ultralight/src/curve/: cofactor.rs  hash.rs  mod.rs
ultralight/src/curve/hash/: mod.rs  try_and_increment.rs
ultralight/src/hash/: composite.rs
ultralight/src/snark/gadgets/bls/: mod.rs
ultralight/test_utils/: pedersen_hash.sage  test_vec.csv
zexe/: Cargo.toml
zexe/algebra/src/curves/edwards_bls12/: mod.rs  tests.rs
zexe/algebra/src/curves/edwards_sw6/: mod.rs
zexe/algebra/src/curves/jubjub/: mod.rs
zexe/algebra/src/curves/models/: mod.rs
zexe/crypto-primitives/: Cargo.toml
zexe/crypto-primitives/src/crh/injective_map/: constraints.rs
zexe/crypto-primitives/src/prf/blake2s/: constraints.rs  mod.rs
zexe/dpc/src/crypto_primitives/crh/: bowe_hopwood.rs  mod.rs
zexe/dpc/src/gadgets/crh/: bowe_hopwood.rs  (+2 more)
zexe/groth16/src/: generator.rs  lib.rs  prover.rs  r1cs_to_qap.rs
zexe/r1cs-std/src/: select.rs
zexe/r1cs-std/src/bits/: boolean.rs
zexe/r1cs-std/src/fields/: fp.rs  fp12.rs  fp2.rs  fp6_3over2.rs  mod.rs
zexe/r1cs-std/src/groups/: mod.rs
zexe/snark-gadgets/src/: utils.rs
zexe/snark-gadgets/src/fields/: fp.rs  fp12.rs  fp2.rs  fp6_3over2.rs  mod.rs
zexe/snark-gadgets/src/groups/: mod.rs
(+6 files in other folders)
