[package]
name = "bls-zexe"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies]
snark-gadgets = { path = "../zexe/snark-gadgets" }
snark = { path = "../zexe/snark" }
algebra = { path = "../zexe/algebra" }
dpc = { path = "../zexe/dpc" }
rand_chacha = { version = "0.1.1" }
rand_core = { version = "0.4" }
rand = { version = "0.4" }
sha2 = "0.8"
failure = "0.1.5"
byteorder = "1.3.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "cofactor"
harness = false
