[package]
name = "gadgets"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
bls-zexe = { path = "../algebra" }

algebra = { git = "https://github.com/scipr-lab/zexe", default-features = false, features = ["bls12_377", "sw6", "edwards_sw6", "edwards_bls12"] }
r1cs-core = { git = "https://github.com/scipr-lab/zexe", default-features = false }
r1cs-std = { git = "https://github.com/scipr-lab/zexe", default-features = false, features = ["bls12_377", "edwards_sw6", "edwards_bls12"] }

[dev-dependencies]
rand_xorshift = { version = "0.2" }
rand = "0.7" 