[package]
name = "bls-snark"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@celo.org>"]
edition = "2018"

[dependencies]
r1cs-std = { path = "../../zexe/r1cs-std" }
crypto-primitives = { path = "../../zexe/crypto-primitives", features = [ "r1cs", "groth16" ] }
r1cs-core = { path = "../../zexe/r1cs-core" }
algebra = { path = "../../zexe/algebra" }
groth16 = { path = "../../zexe/groth16" }
bench-utils = { path = "../../zexe/bench-utils" }
bls-zexe = { path = "../algebra" }
rand = { version = "0.7" }
byteorder = "1.3.2"
hex = "0.3.2"

[dev-dependencies]
rand_xorshift = { version = "0.2" }

[features]
print-trace = [ "bench-utils/print-trace" ]

[lib]
crate-type = ["lib", "staticlib"]

[[example]]
name = "proof"
path = "examples/proof.rs"
