[package]
name = "bls-snark"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@celo.org>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../algebra" }

algebra = { git = "https://github.com/scipr-lab/zexe", features = ["bls12_377", "sw6", "edwards_sw6", "edwards_bls12"] }
r1cs-core = { git = "https://github.com/scipr-lab/zexe" }
r1cs-std = { git = "https://github.com/scipr-lab/zexe", features = ["bls12_377", "edwards_sw6", "edwards_bls12"] }
crypto-primitives = { git = "https://github.com/scipr-lab/zexe", features = ["r1cs", "groth16"] }

# groth16 = { path = "../../zexe/groth16" }
# bench-utils = { path = "../../zexe/bench-utils" }

rand = "0.7" 
byteorder = "1.3.2"
# hex = "0.3.2"
# blake2s_simd = "0.5.8"
log = "0.4.6"

[dev-dependencies]
rand_xorshift = { version = "0.2" }

# [features]
# print-trace = [ "bench-utils/print-trace" ]

[lib]
crate-type = ["lib", "staticlib"]

# [[example]]
# name = "proof"
# path = "examples/proof.rs"
