[package]
name = "bls-crypto"
version = "0.2.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@clabs.co>", "Georgios Konstantopoulos <me@gakonst.com>", "Lucas Ege <lucas@clabs.co>", "Victor Graf <victor@clabs.co>"]
edition = "2018"

[dependencies]
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", features = [ "derive" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", features = [ "std", "parallel"] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", features = [ "std", "parallel"] }
ark-std-recent = { version = "0.3", package = "ark-std" }
ark-std = { git = "https://github.com/arkworks-rs/utils" }

ark-ed-on-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", branch = "main", features = ["parallel"] }

# other deps
rand = "0.7"
byteorder = "1.4.3"
hex = "0.4.3"
clap = "3.0.1"
log = "0.4.14"
lru = "0.7.2"
env_logger = "0.9.0"
blake2s_simd = "1.0.0"
csv = "1.1.6"
rand_chacha = "0.2"
thiserror = "1.0.30"
once_cell = "1.9.0"

[dev-dependencies]
criterion = "0.3.5"
rand_xorshift = "0.2"

[[example]]
name = "simple_signature"
path = "examples/simple_signature.rs"

[[example]]
name = "pop"
path = "examples/pop.rs"

[[example]]
name = "pop_csv"
path = "examples/pop_csv.rs"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = [ "compat" ]
test-helpers = []
compat = []

[[bench]]
name = "batch_bls"
harness = false
