[package]
name = "bls-gadgets"
version = "0.1.4"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@clabs.co>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../bls-crypto", default-features = false }

algebra = { git = "https://github.com/celo-org/zexe", default-features = false, features = ["bls12_377", "bw6_761", "ed_on_bw6_761", "ed_on_bls12_377", "parallel"] }
algebra-core = { git = "https://github.com/celo-org/zexe" } 
r1cs-core = { git = "https://github.com/celo-org/zexe", default-features = false }
r1cs-std = { git = "https://github.com/celo-org/zexe", default-features = false, features = ["bls12_377", "ed_on_cp6_782", "parallel"] }
crypto-primitives = { git = "https://github.com/celo-org/zexe", default-features = false, features = ["parallel"] }

# used only when exporting our test helpers to be used in the snark crate
rand_xorshift = { version = "0.2", optional = true }
rand = { version = "0.7" , optional = true }
tracing = "0.1.13"

[dev-dependencies]
rand_xorshift = { version = "0.2" }
rand = { version = "0.7" }
groth16 = { git = "https://github.com/celo-org/zexe" }
bls-crypto = { path = "../bls-crypto", default-features = false, features = ["test-helpers"] }
tracing-subscriber = { version = "0.2" }

[features]
default = []
test-helpers = ["rand", "rand_xorshift"]
compat = ["bls-crypto/compat"]
