[package]
name = "bls-gadgets"
version = "0.2.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@clabs.co>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../bls-crypto", default-features = false }

ark-relations = { version = "0.3", features = [ "std" ] }
ark-serialize = { version = "0.3", features = [ "derive" ] }
ark-ff = { version = "0.3", features = [ "std", "parallel"] }
ark-ec = { version = "0.3", features = [ "std", "parallel"] }
ark-r1cs-std = {version = "0.3", default-features = false, features = ["std", "parallel"] }
ark-crypto-primitives = { version = "0.3", features = ["parallel", "r1cs"] }
ark-ed-on-bw6-761 = { version = "0.3" }
ark-bls12-377 = { version = "0.3", features = [ "r1cs" ] }
ark-bw6-761 = { version = "0.3" }

# used only when exporting our test helpers to be used in the snark crate
rand_xorshift = { version = "0.2", optional = true }
rand = { version = "0.7", optional = true }
tracing = "0.1.29"
tracing-subscriber = "0.2"

[dev-dependencies]
rand = "0.7"
ark-groth16 = { version = "0.3", features = [ "std", "parallel", "r1cs" ] }
ark-std = { version = "0.3", features = ["std"] }
bls-crypto = { path = "../bls-crypto", default-features = false, features = ["test-helpers"] }

[features]
default = []
test-helpers = ["rand", "rand_xorshift"]
compat = ["bls-crypto/compat"]
