[package]
name = "bls-snark-sys"
version = "0.2.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Michael Straka <mstraka@clabs.co>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../bls-crypto", features = ["compat"] }
epoch-snark = { path = "../epoch-snark", features = ["compat"] }

algebra = { git = "https://github.com/celo-org/zexe", default-features = false, features = ["bls12_377", "parallel"] }
once_cell = "1.4.0"
rand = "0.7"
log = "0.4.8"

[lib]
crate-type = ["lib", "staticlib"]

[dev-dependencies]
groth16 = { git = "https://github.com/celo-org/zexe", features = ["parallel"] }
r1cs-core = { git = "https://github.com/celo-org/zexe" }
hex = "0.4.2"
r1cs-std = { git = "https://github.com/celo-org/zexe", default-features = false, features = ["bls12_377", "ed_on_cp6_782", "parallel"] }
