[package]
name = "bls-snark-sys"
version = "0.2.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Michael Straka <mstraka@clabs.co>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../bls-crypto", features = ["compat"] }
epoch-snark = { path = "../epoch-snark", features = ["compat"] }
ark-bls12-377 = { version = "0.3" }
ark-ff = { version = "0.3", features = [ "std", "parallel"] }
ark-serialize = { version = "0.3", features = [ "derive" ] }
ark-ec = { version = "0.3", features = [ "std", "parallel"] }
ark-std = { version = "0.3", features = ["std"] }
once_cell = "1.9.0"
rand = "0.7"
log = "0.4.14"

[lib]
crate-type = ["lib", "staticlib"]

[dev-dependencies]
ark-groth16 = { version = "0.3", features = [ "std", "parallel", "r1cs" ] }
ark-relations = { version = "0.3", features = [ "std" ] }
hex = "0.4.3"
ark-r1cs-std = { version = "0.3", default-features = false, features = ["std", "parallel"] }
