[package]
name = "epoch-snark"
version = "0.1.4"
authors = ["Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@celo.org>", "Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../bls-crypto", default-features = false }
bls-gadgets = { path = "../bls-gadgets", default-features = false }

algebra = { git = "https://github.com/scipr-lab/zexe", features = ["bls12_377", "bw6_761", "ed_on_bw6_761", "ed_on_bls12_377", "parallel"], rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1" }
r1cs-core = { git = "https://github.com/scipr-lab/zexe", rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1" }
r1cs-std = { git = "https://github.com/scipr-lab/zexe", features = ["bls12_377", "ed_on_bw6_761", "ed_on_bls12_377", "parallel"], rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1" }
crypto-primitives = { git = "https://github.com/scipr-lab/zexe", features = ["r1cs", "groth16", "parallel"], rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1" }
groth16 = { git = "https://github.com/scipr-lab/zexe", features = ["parallel"], rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1" }

rand = "0.7" 
byteorder = "1.3.2"
blake2s_simd = "0.5.8"
thiserror = "1.0.11"
tracing-subscriber = "0.2.3"
tracing = "0.1.13"

[dev-dependencies]
rand_xorshift = { version = "0.2" }
bench-utils = { git = "https://github.com/scipr-lab/zexe", rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1" }
bls-gadgets = { path = "../bls-gadgets", default-features = false, features = ["test-helpers"] }
bls-crypto = { path = "../bls-crypto", default-features = false, features = ["test-helpers"] }
hex = "0.4.2"

[features]
default = ["compat"]
print-trace = ["bench-utils/print-trace"]
compat = ["bls-crypto/compat", "bls-gadgets/compat"]

[lib]
crate-type = ["lib", "staticlib"]

[[example]]
name = "proof"
path = "examples/proof.rs"

[[example]]
name = "constraints"
path = "examples/constraints.rs"
