[package]
name = "epoch-snark"
version = "0.2.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@celo.org>", "Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../bls-crypto", default-features = false }
bls-gadgets = { path = "../bls-gadgets", default-features = false }

ark-ff = { version = "0.3", features = [ "std", "parallel"] }
ark-ec = { version = "0.3", features = [ "std", "parallel"] }
ark-bls12-377 = { version = "0.3", features = [ "r1cs" ] }
ark-bw6-761 = { version = "0.3" }
ark-ed-on-bls12-377 = { version = "0.3" }
ark-crypto-primitives = { version = "0.3", features = ["parallel", "r1cs"] }
ark-r1cs-std = { version = "0.3", default-features = false, features = ["std", "parallel"] }
ark-relations = { version = "0.3", features = [ "std" ] }
ark-serialize = { version = "0.3", features = [ "derive" ] }
ark-groth16 = { version = "0.3", features = [ "std", "parallel", "r1cs" ] }
ark-std = { version = "0.3" }

rand = "0.7"
byteorder = "1.4.3"
blake2s_simd = "1.0.0"
thiserror = "1.0.30"
tracing-subscriber = "0.2"
tracing = "0.1.29"

[dev-dependencies]
rand_xorshift = "0.2"
bls-gadgets = { path = "../bls-gadgets", default-features = false, features = ["test-helpers"] }
bls-crypto = { path = "../bls-crypto", default-features = false, features = ["test-helpers"] }
hex = "0.4.3"

[features]
default = ["compat"]
print-trace = ["ark-std/print-trace"]
compat = ["bls-crypto/compat", "bls-gadgets/compat"]

[lib]
crate-type = ["lib", "staticlib"]

[[example]]
name = "proof"
path = "examples/proof.rs"

[[example]]
name = "constraints"
path = "examples/constraints.rs"
