[package]
name = "epoch-snark"
version = "0.2.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@celo.org>", "Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../bls-crypto", default-features = false }
bls-gadgets = { path = "../bls-gadgets", default-features = false }

ark-ff = { git = "https://github.com/arkworks-rs/algebra", features = [ "std", "parallel"] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", features = [ "std", "parallel"] }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", features = [ "r1cs" ] }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }
ark-ed-on-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }
ark-ed-on-bls12-377 = { git = "https://github.com/arkworks-rs/curves" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", branch = "main", features = ["parallel", "r1cs"] }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false, features = ["std", "parallel"] }
ark-relations = { git = "https://github.com/arkworks-rs/snark", features = [ "std" ] }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", features = [ "derive" ] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", features = [ "std", "parallel", "r1cs" ] }

rand = "0.7"
byteorder = "1.3.2"
blake2s_simd = "0.5.8"
thiserror = "1.0.11"
tracing-subscriber = "0.2.3"
tracing = "0.1.13"

[dev-dependencies]
rand_xorshift = { version = "0.2" }
bench-utils = { git = "https://github.com/arkworks-rs/utils" }
bls-gadgets = { path = "../bls-gadgets", default-features = false, features = ["test-helpers"] }
bls-crypto = { path = "../bls-crypto", default-features = false, features = ["test-helpers"] }
hex = "0.4.2"

[features]
default = ["compat"]
print-trace = ["bench-utils/print-trace"]
compat = ["bls-crypto/compat", "bls-gadgets/compat"]

[lib]
crate-type = ["lib", "staticlib"]

[[example]]
name = "proof"
path = "examples/proof.rs"

[[example]]
name = "constraints"
path = "examples/constraints.rs"
