[package]
name = "persistent-prover"
version = "0.2.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2021"

[dependencies]
bls-crypto = { path = "../bls-crypto", default-features = false }
bls-gadgets = { path = "../bls-gadgets", default-features = false }
epoch-snark = { path = "../epoch-snark", default-features = false }

ark-ff = { git = "https://github.com/arkworks-rs/algebra", features = [ "std", "parallel"] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", features = [ "std", "parallel"] }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", features = [ "r1cs" ] }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }
ark-ed-on-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }
ark-ed-on-bls12-377 = { git = "https://github.com/arkworks-rs/curves" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", branch = "main", features = ["parallel", "r1cs"] }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false, features = ["std", "parallel"] }
ark-relations = { git = "https://github.com/arkworks-rs/snark", features = [ "std" ] }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", features = [ "derive" ] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", features = [ "std", "parallel", "r1cs" ] }
ark-std = { git = "https://github.com/arkworks-rs/utils" }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["celo"] }
bench-utils = { git = "https://github.com/arkworks-rs/utils" }
gumdrop = "0.8.0"
rand = "0.7"
byteorder = "1.3.2"
blake2s_simd = "0.5.8"
thiserror = "1.0.11"
tracing-subscriber = { version = "0.2.15" }
tracing = "0.1.13"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.2"
futures-util = "0.3.5"
uuid = "0.8"
lazy_static = "1.4"
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
eyre = "0.6"

[dev-dependencies]
rand_xorshift = { version = "0.2" }
bls-gadgets = { path = "../bls-gadgets", default-features = false, features = ["test-helpers"] }
bls-crypto = { path = "../bls-crypto", default-features = false, features = ["test-helpers"] }

[features]
default = ["compat"]
print-trace = ["bench-utils/print-trace"]
compat = ["bls-crypto/compat", "bls-gadgets/compat"]